[gd_scene load_steps=2 format=3 uid="uid://c4mmwtl5imwmf"]

[ext_resource type="Script" path="res://game/scripts/pause_menu.gd" id="1_3oy00"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3oy00")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -180.0
offset_right = 176.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Menu"]
layout_mode = 2
text = "Resume"

[node name="SaveGameButton" type="Button" parent="Menu"]
layout_mode = 2
text = "Save  Game"

[node name="LoadGameButton" type="Button" parent="Menu"]
layout_mode = 2
text = "Load Game
"

[node name="ExitToMainMenuButton" type="Button" parent="Menu"]
layout_mode = 2
text = "Exit to Main Menu
"

[connection signal="pressed" from="Menu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Menu/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="Menu/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Menu/ExitToMainMenuButton" to="." method="_on_exit_to_main_menu_button_pressed"]
